[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drqv2"
version = "1.0.0"
authors = []
description = "DrqV2"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "tensordict",
    "segdac"
]

[tool.hatch.build.targets.wheel]
packages = ["src/drqv2/"]
